--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
 about-time==4.2.1
 alive-progress==3.2.0
+azure-core==1.36.0
+azure-cosmos==4.14.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+dotenv==0.9.9
+et_xmlfile==2.0.0
 grapheme==0.6.0
+idna==3.10
 numpy==2.2.2
+openpyxl==3.1.5
 pandas==2.2.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 pytz==2025.1
-six==1.17.0
-tzdata==2025.1
 requests==2.32.3
+six==1.17.0
+typing_extensions==4.15.0
+tzdata==2025.1
+urllib3==2.4.0
